# kanso

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  build.sh  build.zig  build.zig.zon  compile_commands.json  compile_flags.txt  profile_20250906_003302.json
.ccls-cache/@@home@candtech@projects@kanso/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@GLFW@glfw3native.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@X11@X.h.blob  @usr@include@X11@Xdefs.h.blob  @usr@include@X11@Xfuncproto.h.blob  @usr@include@X11@Xlib.h.blob  @usr@include@X11@Xosdefs.h.blob  @usr@include@X11@Xutil.h.blob  @usr@include@X11@extensions@Xrandr.h.blob  @usr@include@X11@extensions@Xrender.h.blob  @usr@include@X11@extensions@randr.h.blob  @usr@include@X11@extensions@render.h.blob  @usr@include@X11@keysym.h.blob  @usr@include@X11@keysymdef.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  (+408 more)
.ccls-cache/@home@candtech@projects@kanso/: build@CMakeFiles@4.0.3-dirty@CompilerIdC@CMakeCCompilerId.c.blob  build@CMakeFiles@4.0.3-dirty@CompilerIdCXX@CMakeCXXCompilerId.cpp.blob  src@base@arena.cpp  src@base@arena.cpp.blob  src@base@arena.h  src@base@arena.h.blob  src@base@array.h  src@base@array.h.blob  src@base@base.h  src@base@base.h.blob  src@base@list.h  src@base@list.h.blob  src@base@logger.cpp  src@base@logger.cpp.blob  src@base@logger.h.blob  src@base@profiler.h.blob  src@base@simd.h  src@base@simd.h.blob  src@base@string_core.h  src@base@string_core.h.blob  src@base@types.h  src@base@types.h.blob  src@base@util.h.blob  src@font@font.cpp  src@font@font.cpp.blob  src@font@font.h  src@font@font.h.blob  src@font@font_cache.cpp.blob  src@generated.h.blob  src@main.cpp  src@main.cpp.blob  src@meta.cpp.blob  src@os@os.cpp.blob  src@os@os.h.blob  src@renderer@renderer_core.h.blob  src@renderer@renderer_metal.h.blob  src@renderer@renderer_metal.mm.blob  src@renderer@renderer_metal_internal.h  src@renderer@renderer_metal_internal.h.blob  src@renderer@renderer_metal_passes.mm.blob  (+9 more)
src/: Renderer.zig  c.zig  main.cpp  main.zig  meta.cpp  root.zig  types.cpp  types.h
src/base/: arena.c  arena.cpp  arena.h  arena.zig  array.h  base.h  base_core.h  base_inc.c  base_inc.cpp  base_inc.h  base_inc.m  command_line.c  command_line.h  hash_table.h  list.h  list.zig  logger.c  logger.cpp  logger.h  loop.h  loop_kqueue.c  math_core.h  os.h  os.zig  os_gfx.h  os_gfx_macos.m  os_gfx_x11.c  os_posix.c  os_posix.cpp  os_windows.c  os_windows.cpp  profile.c  profile.h  profiler.h  simd.h  string_core.h  system_headers.h  tctx.c  tctx.cpp  tctx.h  (+8 more)
src/core/draw/: draw.cpp  draw.h  draw_inc.cpp  draw_inc.h
src/core/font/: font.cpp  font.h  font_cache.cpp  font_cache.h  font_inc.cpp  font_inc.h  stb_truetype_impl.h
src/core/renderer/: renderer_core.h  renderer_inc.cpp  renderer_inc.h  renderer_metal.h  renderer_metal.mm  renderer_metal_internal.h  renderer_metal_passes.mm  renderer_metal_shaders.mm  renderer_vulkan.cpp  renderer_vulkan.h  renderer_vulkan_passes.cpp  renderer_vulkan_shaders.cpp
src/core/renderer/shaders/glsl/: blur.frag  mesh.vert  rect.vert
src/core/renderer/shaders/metal/: rect.metal
src/core/ui/: ui_inc.cpp  ui_inc.h
src/dbui/: dbui.h  main.c  postgres.c  postgres.h
src/draw/: draw.c  draw.cpp  draw.h  draw_inc.c
src/font/: font.c  font.cpp  font.h  font_cache.c  font_cache.cpp  font_cache.h  font_inc.c  font_inc.cpp
src/meta/: meta.c
src/os/: os.cpp  os.h  os_gfx.h  os_gfx_macos.m  os_gfx_x11.c  os_inc.c  os_inc.h  os_posix.c  os_windows.c
src/renderer/: renderer.h  renderer_core.h  renderer_impl.cpp  renderer_inc.c  renderer_inc.h  renderer_metal.h  renderer_metal.m  renderer_metal.mm  renderer_metal_internal.h  renderer_metal_passes.m  renderer_metal_passes.mm  renderer_metal_shaders.m  renderer_metal_shaders.mm  renderer_opengl.c  renderer_opengl.cpp  renderer_opengl.h  renderer_opengl_linux.c  renderer_opengl_macos.c  renderer_vulkan.c  renderer_vulkan.cpp  renderer_vulkan.h  renderer_vulkan_passes.c  renderer_vulkan_passes.cpp  renderer_vulkan_shaders.c  renderer_vulkan_shaders.cpp  renderer_webgpu.cpp  renderer_webgpu.h  renderer_webgpu_passes.cpp  renderer_webgpu_shaders.cpp
src/renderer/shaders/glsl/: blur.vert  rect.frag
src/renderer/shaders/metal/: blur.metal  mesh.metal  rect.metal
src/shaders/glsl/: blur.vert  mesh.frag
src/shaders/metal/: rect.metal
src/tansaku/: main.c  regex.h  tansaku.h  worker.c  worker.h
src/test/: ui_test.c
src/ui/: ui.h  ui_basic_widget.c  ui_basic_widget.h  ui_core.c  ui_core.h  ui_inc.c  ui_inc.h
